--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     Class.prototype.num = 123.456;
     Class.prototype.str = 'Hello, World!';
     Class.prototype.bool = true;
+    Class.foo = 0;
+    Class.bar = [0, '', false];
+    Class.baz = new Class;
     itsuwa(Class);
 
     // instance
